# bitsio-agenticops

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_CONTROL_PLANE_TODO.md  CLAUDE.md  FIRECRAWL_INDUSTRY_VALIDATION_REPORT.md  FOR_SUMAN_READ_FIRST.md  IMPLEMENTATION_DETAILS.md  Makefile  QUICK_REFERENCE.txt  QUICK_REFERENCE_CARD.txt  README.md  SPEC.md  START_HERE.md  SUMAN_DELIVERY_PACKAGE.md  TELEMETRY_VALUE_DEPLOYMENT_GUIDE.md  create_consolidated_pdf.py  docker-compose.yml  opencode.json  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  e2e-tests.yml  release-gate.yml  release.yml  security.yml  unit-tests.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  dependencies.py  main.py
apps/api/app/middleware/: __init__.py  auth.py  otel.py  rate_limit.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/routers/: __init__.py  approvals.py  conversations.py  dashboard.py  decision_traces.py  feedback.py  fraud.py  fraud_batch.py  health.py  incident_context.py  incidents.py  incidents_batch.py  monitoring.py  settings.py  support.py  telemetry.py  telemetry_executive.py  waste.py
apps/api/app/schemas/: context_response.py
apps/api/app/services/: contracts.py  conversation_service.py  cost_engine.py  detection_coverage.py  feedback_service.py  incident_trace_assembly.py  model_selector.py  runtime_connectivity.py  runtime_profiles.py  scoring_engine.py  splunk_live.py  splunk_tunnel.py  token_cost.py  trace_service.py
apps/web/: Dockerfile  instrumentation.ts  next.config.js  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/workers/: worker.py
docker/: otel-collector-config.yaml
docs/: API_REFERENCE.md  DEMO_READINESS.md  DEPLOYMENT_GUIDE.md  GOOGLE_MEET_DEMO_GUIDE.md  INDEX.md  LIVE_SPLUNK_MODE.md  LIVE_SPLUNK_ONLY.md  LOCAL_DEV.md  LOCAL_FIRST_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  RBAC_AUDIT.md  SOURCE_OF_TRUTH.md  SSH_TUNNEL_SETUP.md  TELEMETRY_DATA_FLOW.md
docs/adr/: ADR-001-local-first-inference.md  ADR-002-zero-fallback-telemetry.md  ADR-003-splunk-mcp-architecture.md  ADR-004-agentic-decision-engine.md  ADR-004-persistence.md  ADR-005-retrieval-and-token-strategy.md  ADR-006-deployment-target.md  ADR-006-explainable-telemetry-recommendations.md  ADR-010-embedding-service-abstraction.md
docs/demo/: TELEMETRY_VALUE_15MIN_DEMO_PLAYBOOK.md
docs/plan/: ACCESS_AND_DEPENDENCY_CHECKLIST.md  DECISION_LOG.md  DEPENDENCIES.md  EXECUTION_BOARD.md  HANDOFF_LOG.md  MASTER_ROADMAP.md  (+1 more)
graphify/: __init__.py  retrieval_engine.py
reports/: BASELINE_ANALYSIS.md  baseline_failures.csv  baseline_stats.csv  baseline_stats_history.csv
scratch/: check_splunk.exp  get_token.exp  get_token2.exp  get_token3.exp  get_token4.exp  get_token5.exp  start_tunnel.exp
scripts/: check-status.sh  deploy-production.sh  deploy-safe.sh  deploy_vultr_e2e.sh  local.sh  run-local.sh  run_live_api.py  seed_incidents.py  seed_live_splunk_demo.py  seed_live_splunk_massive.py  seed_live_splunk_realistic.py  validate-deployment.sh  verify_live_flow.py  verify_model_mode.py  vultr.deploy.env.example
tests/: conftest.py
(+331 files in other folders)
