[project]
name = "bitsio-agenticops"
version = "0.1.0"
description = "BitsIO AgenticOps for Splunk"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "langgraph>=0.2.35",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "redis>=5.1.0",
  "sqlalchemy>=2.0.35",
  "uvicorn>=0.30.6"
]

[dependency-groups]
dev = [
  "black>=24.8.0",
  "isort>=5.13.2",
  "locust>=2.31.8",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.5"
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "apps/api",
  "apps/mock_mcp/app",
  "packages/agent-core/src",
  "packages/connectors/splunk-mcp/src",
  "packages/decision-tracing/src"
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["agent_core", "decision_tracing", "splunk_mcp", "apps"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "UP047"]

[tool.ruff.lint.isort]
known-first-party = ["agent_core", "decision_tracing", "splunk_mcp", "apps"]
