[project]
name = "bitsio-telemetry-agent"
version = "0.1.0"
description = "BitsIO Telemetry Value Agent - Local-first AI observability platform"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python-version = "3.11"
strict = true
ignore-missing-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio-mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["packages/*/src"]